--- a/src/TidyWindow.App/TidyWindow.App.csproj
+++ b/src/TidyWindow.App/TidyWindow.App.csproj
@@ -12,4 +12,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.6" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+  </ItemGroup>
+
 </Project>
