fixed installer issue

--- a/src/TidyWindow.App/TidyWindow.App.csproj
+++ b/src/TidyWindow.App/TidyWindow.App.csproj
@@ -17,6 +17,12 @@
     <RootNamespace>TidyWindow.App</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <SelfContained>true</SelfContained>
+    <PublishSingleFile>true</PublishSingleFile>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.6" />
