fixed script not found issue

--- a/src/TidyWindow.Core/TidyWindow.Core.csproj
+++ b/src/TidyWindow.Core/TidyWindow.Core.csproj
@@ -12,4 +12,16 @@
     <PackageReference Include="YamlDotNet" Version="13.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- Surface automation scripts and catalog data for any consumers of the core library -->
+    <Content Include="..\..\automation\**\*.*" Link="automation\%(RecursiveDir)%(Filename)%(Extension)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
+    <Content Include="..\..\data\**\*.*" Link="data\%(RecursiveDir)%(Filename)%(Extension)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
