fixed most off the issues

--- a/src/TidyWindow.App/TidyWindow.App.csproj
+++ b/src/TidyWindow.App/TidyWindow.App.csproj
@@ -15,6 +15,7 @@
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <AssemblyName>TidyWindow</AssemblyName>
     <RootNamespace>TidyWindow.App</RootNamespace>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
